Correct body alignment (#44)
* Correct body alignment

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,3 +1,8 @@
+.header {
+    display: flex;
+    align-items: center;
+}
+
 .header__logo {
     display: flex;
     font-size: 22px;
@@ -19,7 +24,7 @@
     border: 1px solid var(--brand-green);
     background-color: var(--brand-green-light);
     border-radius: 20px;
-    
+    white-space: nowrap;
     font-weight: bold;
 }
 
@@ -59,4 +64,5 @@
     border-bottom: 2px solid var(--brand-green);
     opacity: 1;
 }
+
 
